[tool.poetry]
name = "flask-for-startups"
version = "0.1.0"
description = "This flask boilerplate was written to help make it easy to iterate on your startup/indiehacker business, thereby increasing your chances of success."
authors = ["Nuvic"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.5.0"
Flask = "^2.0.3"
bleach = "^4.1.0"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
marshmallow = "^3.14.1"
pytest = "^7.0.1"
python-dotenv = "^0.19.2"
bcrypt = "^3.2.0"
psycopg2 = "^2.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
