[tool.poetry]
name = "flask-for-startups"
version = "0.1.0"
description = "This flask boilerplate was written to help make it easy to iterate on your startup/indiehacker business, thereby increasing your chances of success."
authors = ["Nuvic"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.6.2"
Flask = "^2.2.3"
bleach = "^6.0.0"
SQLAlchemy = "^2.0.9"
alembic = "^1.10.3"
pytest = "^7.3.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
psycopg2 = "^2.9.6"
pydantic = "^1.10.7"
email-validator = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
